syntax = "proto3";

package adminauth;

option go_package = "./pkg/pb/auth/admin";

service Admin{
    rpc AdminLogin(AdminLoginInRequest) returns (AdminLoginResponse){};
    rpc GetJobseekers(GetJobseekerRequest) returns (GetJobseekerResponse) {};
    rpc BlockJobseeker(BlockJobseekerRequest) returns (BlockJobseekerResponse) {};
    rpc UnBlockJobseeker(UnBlockJobseekerRequest) returns (UnBlockJobseekerResponse) {};
    rpc GetRecruiters(GetRecruiterRequest) returns (GetRecruitersResponse) {};
    rpc BlockRecruiter(BlockRecruiterRequest) returns (BlockRecruiterResponse) {};
    rpc UnBlockRecruiter(UnBlockRecruiterRequest) returns (UnBlockRecruiterResponse) {};
}

message AdminDetails{
    uint64 id=1;
    string firstname=2;
    string lastname=3;
    string email=4;
}
message AdminLoginInRequest{
    string email=1;
    string password=2;
}
message AdminLoginResponse{
    int64 status=1;
    AdminDetails adminDetails=2;
    string token=3;
    string error=4;
}

message GetJobseekerRequest {
    int32 page = 1;
}
message GetRecruiterRequest {
    int32 page = 1;
}


message BlockUserRequest {
    uint64 user_id = 1;
}

message BlockUserResponse {
    bool success = 1;
    string error_message = 2;
}
message UnBlockUserRequest {
    uint64 user_id = 1;
}

message UnBlockUserResponse {
    bool success = 1;
    string error_message = 2;
}

message JobSeekerDetails {
    uint64 id = 1;
    string email = 2;
    string firstname = 3;
    string phone_number = 4;
    bool blocked=5;
   
}

message GetJobseekerResponse {
   repeated JobSeekerDetails Jobseeker=1;
}

message BlockJobseekerRequest {
    int64 jobseeker_id=1;
}

message BlockJobseekerResponse {
    string status=1;
}

message UnBlockJobseekerRequest {
     int64 jobseeker_id=1;
}

message UnBlockJobseekerResponse {
    string status=1;
}

message GetRecruitersResponse {
    repeated RecruiterDetails recruiter=1;
}

message RecruiterDetails {
    uint64 id = 1;
    string email = 2;
    string company_name = 3;
    string phone_number = 4;
    bool blocked=5;
}

message BlockRecruiterRequest {
    int64 GetRecruiter_id=1;
}

message BlockRecruiterResponse {
    string status=1;
}

message UnBlockRecruiterRequest {
    int64 GetRecruiter_id=1;
}

message UnBlockRecruiterResponse {
     string status=1;
}